# PharaohOverlay

./: .gitignore  GDNScraper.gdnlib  GDNScraper.gdns  README.md  project.godot
GDNative/: CMakeLists.txt  Memory.cpp  Memory.hpp  gdlibrary.cpp  godot-cpp  library.cpp  library.h
fonts/: font1.tres  large_on_black.tres  large_on_white.tres  plain.tres  plain_white.tres  small_black_on_black.tres  small_black_on_white.tres  small_blue.tres  small_white.tres  small_yellow.tres
graphics/: font1.kmp
scenes/: BoltsAndAnkhs.tscn  Main.tscn  StorageResource.tscn
scripts/: BoltsAndAnkhs.gd  Main.gd  StorageResource.gd
